pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: abc-pod
  labels:
    app: abc-app
spec:
  containers:
    - name: abc-container
      image: httpd
      ports:
        - containerPort: 80
    - name: tomcat-container
      image: tomcat
      ports:
        - containerPort: 8080
...
