statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: my-sts
  labels:
    app: mysql
spec:
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql-container
          image: mysql
          ports:
            - containerPort: 3306
  replicas: 3
  selector:
    matchLabels:
      app: mysql
