ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: laptop-svc
      port:
        number: 80
  rules:
    - host: "a46cbdb6adc5549fcac767a6fb92c01e-37d9a8bddb9e1dcb.elb.eu-west-3.amazonaws.com"
      http:
        paths:
        - path: /mobile
          pathType: Prefix
          backend:
            service:
              name: mobile-svc
              port:
                number: 80
        - path: /laptop
          pathType: Prefix
          backend:
            service:
              name: laptop-svc
              port:
                number: 80
